      can now trigger the usage of an LFO for creating an LFO sequence, which can be used in the MidiPlayer for remote-controlling
      MIDI controllers. In the DrumSequenceEngine, a conditional LFO can be configured via the "conditionalLFO" tag, which can be
      mapped to a MIDI controller in the MidiPlayer via the "instrumentControllerLFO" tag.

    - Added support for using "-" in the RandomPatternEngine and the RandomFragmentPatternEngine in order to create an empty pattern.
      For example, you can now use "A1,-,A2,-".

    - Added support for using a global seed for a component via the "globalSeed" attribute. Unlike the "salt" attribute (which derives
      the seed from the parent component's seed and the given salt), the "globalSeed" attribute derives the seed from the global seed
      and the given global salt.

    - Controllers for LFOs can now be accessed by their MIDI controller number in addition to predefined names. This allows using
      controllers where no predefined name exists.

    - Cleaned up all code.


0.7.1: 2014-05-31

    - The option "--show-midi-devices" (alias "-m") now also shows devices with MIDI IN in additon to devices with MIDI OUT.

    - Fixed a stupid bug that made the MIDI device detection fail if the first MIDI device in the <device> tag of the MidiPlayer is
      not available in the system. A workaround is to put just the available MIDI device in the list.
     

0.7: 2014-05-24

    - Added support for function evaluation in pattern strings. The first function added is E(pulses, steps, on-fragment,
      off-fragment), which expands to the Euclidean rhythm given by the given number of pulses and steps. See the Basics documentation
      for details about pattern function evaluation.

    - The MidiPlayer now supports receiving synchronization messages from an external MIDI device using the
      "synchronizationDevice" tag. The synchronization device can supply MIDI timing ticks for remote-controlling SoundHelix'